<resources>
    <string name="app_name">Quiet Exceptional</string>
    <string name="accessibility_service_label">AllowRepeatCallers</string>
    <string name="accessibility_service_desc">Accessibility Service is needed to detect if the volume button is pressed</string>
    <string name="language_change">change</string>
    <string name="Settings">Settings</string>
    <string name="troubleshoot">Troubleshoot</string>
    <string name="App_Language">App Language</string>
    <string name="RingInDND">Ring in Do Not Disturb or Silent Mode</string>
    <string name="RingInDND_desc">This applies to the feature Missedcall Alerts</string>
    <string name="Allfeat_Tap2Enable">Tap to Enable</string>
    <string name="Allfeat_settings">Settings</string>
    <string name="Allfeat_Info">Info</string>
    <string name="Allfeat_Share">Share</string>
    <string name="PC_AddContacts">Add Contacts</string>
    <string name="ARC_Title">Allow Repeat Callers</string>
    <string name="ARC_description"> Device Rings on Successive calls, if a call was missed in Silent or Vibrate Mode.\n\nNotifications can be dismissed to disable the ringing.</string>
    <string name="ARC_Volume">Volume</string>
    <string name="MCA_Title">Alert Missed Calls</string>
    <string name="MCA_description">Device makes a Short sound after Missed calls .\nSwipe away the Notification to stop the additional ping</string>
    <string name="QS_Title">Quick Switch</string>
    <string name="QS_description">Quickly change ringer modes by double pressing volume buttons when the screen is on</string>
    <string name="QS_RequestAccessibility">To use this feature, the app needs access to the volume buttons of the device. This is managed by the Accessibility permission.\nPress continue to provide these in the settings menu.\n
                        \nThis permission is only needed to access the volume buttons and no other information is used or created.\n\nYour privacy is most important and you can disable this feature or permission anytime.</string>
    <string name="PC_Title">Prio Contacts</string>
    <string name="SA_Title">Quiet Exceptional Alarm</string>
    <string name="PC_description">Device Rings on if a call is received from marked Contacts, if the device is in silent or Vibrate mode.</string>
    <string name="TapVolumeTest">Tap Here To Test Volume</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="Allfeat_Tap2Permission">Tap to grant Permissions</string>
    <string name="missing_permissions">" Missing Permissions "</string>
    <string name="provide_dnd_permissions">To use this app DND permisions are needed . Press continue to provide these in the app settings menu</string>
    <string name="continue_menu">continue</string>
    <string name="cancel_menu">cancel</string>
    <string name="exception_on_dialog">" Exception on dialog "</string>
    <string name="no_contact_selected">No Contact selected</string>
    <string name="contact_already_exists">Contact already exists</string>
    <string name="permission_already_requested">To use this app permisions are needed to read Contacts and detect incoming calls. Press continue to provide these in the app settings menu</string>
    <string name="long_press_to_send_emergency">Long press to alert favourite contact</string>
    <string name="exception_on_receive_call">" Exception on receive CALL "</string>
    <string name="set_to_vibrate">set to vibrate</string>
    <string name="set_to_silent">set to silent</string>
    <string name="rate_app">Rate App</string>
    <string name="tap_to_disable">Tap To Disable</string>
    <string name="SA_description">Device rings on receiving the Notification message "Quiet Exceptional Alarm" from selected contacts.</string>
    <string name="emergency_message_swipe_to_stop_playing_tune">Alarm Message. Swipe to stop playing tune</string>
    <string name="no_contacts_found">No Contacts found</string>
    <string name="requestShareSMSAlarm">Its a good Idea to let the new Contacts know. Send a message that they can reach you with Alarm SMS? This will also share a link to download the app.</string>
    <string name="accept_menu">Yes</string>
    <string name="reject_menu">No</string>
    <string name="Quiet_Exceptional_Alarm">Quiet Exceptional Alarm</string>
    <string name="NotificationListener_desc">This Permission is needed to detect missed calls and SMS Alarms.</string>
    <string name="enable_feature_to_access_settings">" Enable Feature to Access Settings "</string>
    <string name="no_favourites_added">No Favourites Added</string>
    <string name="welcome_dialog">Welcome ! Simply tap the Feature title to get started. Swipe for more features. Permissions may be requested additionally at each feature. Description of how these are used is available in the Navigation menu</string>
    <string name="confirm_missedcall_dialog_text">This text will be compared with the Notifications to confirm Missed Calls</string>
    <string name="custom_match_text_input">Configure Match Text</string>
    <string name="share_message_addedContact">Hi.I have Listed you as an Alarm Contact on Quiet Exceptional.\nIf you send me the Message \"Quiet Exceptional Alarm\" My phone will ring on every ringer Mode.Click here to try the app!\n\n</string>
    <string name="ThanksForChoosing">Thank you for choosing Quiet Exceptional..</string>
    <string name="welcome1">This app helps you stay focused by silencing distractions while ensuring important notifications can still ring through when needed.</string>
    <string name="welcome2">Quiet Exceptional reads Notifications to detect these and operates DND settings if needed.\n\nNo Data leaves the device without user intervention and Quiet Exceptional does not need Internet Access to function.</string>
    <string name="welcome3">Tap here for a detailed description of the Permissions required. Please provide permission to continue.</string>
    <string name="Notification_Permissions">Notification Permissions</string>
    <string name="continue_string">Continue</string>
    <string name="copied_to_clipboard">Message Copied to Clipboard</string>
    <string name="Exit">Exit</string>
    <string name="SavenExit">Save and Exit</string>
    <string name="tempdnddesc">Temporarily silence the device. DND mode is removed after the set duration.  For best experience, drag from the top and add to Quick Settings.</string>
    <string name="version">Version: PR_127</string>
    <string name="addCustomtile_suggestion">Drag down from the top to open Quick Settings. Add Temp DND to Quick Settings for best experience.</string>
    <string name="share_message">" Hi, Im using the app Quiet Exceptional. With this app, you don't have to worry about misplacing your device in silent mode! It helps you stay focused by silencing distractions while ensuring important notifications can still ring through when needed. You can download the app here! "</string>
    <string name="permissions_needed">Permissions Needed</string>
    <string name="SA_PermissionsNeeded">This feature needs access to notifications and Contacts detect Alarm Messages. Please grant permissions to continue.</string>
    <string name="AMC_PermissionsNeeded">This feature uses notifications and call states to detect missed calls. Please grant permissions to continue.</string>
    <string name="TempDND_Permissionsneeded">This feature needs to be able to toggle Do not Disturb settings. Please provide permission to continue</string>
    <string name="permissions_needed_title">Permissions needed</string>
    <string name="ping_again_after">Extra Ping</string>
    <string name="ATM_Title">Ping Custom Text</string>
    <string name="ATM_description">Device Pings if a Notification contains custom text.\nSwipe away the Notification to stop the additional ping</string>
    <string name="select_quiet_exceptional_from_the_list">" Select Quiet Exceptional from the list "</string>
    <string name="exit_without_saving">Exit Without Saving?</string>
    <string name="text_is_empty">" Text is empty "</string>
    <string name="save">Save</string>
    <string name="enter_custom_text">Enter Custom Text</string>
    <string name="device_pings_upon_detecting_this_text_in_a_notification">Device pings upon detecting this text in a notification</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="remove_favourite">Remove Favourite</string>
    <string name="make_favourite">Make Favourite</string>
    <string name="your_contacts">Your Contacts</string>
    <string name="bypass_batt_info_dialog">. Some Device Manufacturers pause timers running in the background. To ensure reliable functioning of timers, please allow app to run in the Background.</string>
    <string-array name="time_options">
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>8 Minutes</item>
    </string-array>
    <string-array name="extraping_options">
        <item>None</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>8 Minutes</item>
    </string-array>
</resources>