<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/starimage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="-10dp"
        android:rotation="-20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_star_border_24"
        app:tint="#0C7B93" />

    <ImageView
        android:id="@+id/heartimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:rotation="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        app:srcCompat="@drawable/baseline_favorite_border_24"
        app:tint="#72435C" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/TapToEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Allfeat_Tap2Enable"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeatTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/FeatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/PC_Title"
        android:textColor="#F79489"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <SeekBar
        android:id="@+id/seekBar_PrioContacts"
        android:layout_width="285dp"
        android:layout_height="24dp"
        android:layout_below="@+id/TapToEnable"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TapToEnable" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100%"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_PrioContacts"
        app:layout_constraintStart_toStartOf="@+id/seekBar_PrioContacts"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_PrioContacts" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0%"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/seekBar_PrioContacts"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_PrioContacts" />

    <ImageView
        android:id="@+id/manageContacts"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFBF2"
        android:textColor="#C5C5C5"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_PrioContacts"
        app:layout_constraintStart_toStartOf="@+id/seekBar_PrioContacts"
        app:layout_constraintTop_toBottomOf="@+id/taptotestvolume"
        app:srcCompat="@drawable/baseline_add_24" />
    <TextView
        android:id="@+id/manageContacts_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PC_AddContacts"
        android:textColor="#2F435A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/manageContacts"
        app:layout_constraintStart_toStartOf="@+id/manageContacts"
        app:layout_constraintTop_toBottomOf="@+id/manageContacts" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/ARC_Volume"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_PrioContacts"
        app:layout_constraintStart_toStartOf="@+id/seekBar_PrioContacts"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_PrioContacts" />

    <TextView
        android:id="@+id/taptotestvolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/TapVolumeTest"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_PrioContacts" />

</androidx.constraintlayout.widget.ConstraintLayout>