<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF2"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/managecustomText"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFBF2"
        android:textColor="#C5C5C5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="@+id/FeatTitle"
        app:layout_constraintTop_toBottomOf="@+id/taptotestvolume"
        app:srcCompat="@drawable/baseline_add_24" />

    <TextView
        android:id="@+id/managecustomText_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Text"
        android:textColor="#2F435A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/managecustomText"
        app:layout_constraintStart_toStartOf="@+id/managecustomText"
        app:layout_constraintTop_toBottomOf="@+id/managecustomText" />


    <TextView
        android:id="@+id/spinnerdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ping_again_after"
        android:textColor="#2F435A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/timechoices"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/timechoices"
        app:layout_constraintTop_toBottomOf="@+id/timechoices" />

    <Spinner
        android:id="@+id/timechoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        app:layout_constraintBottom_toBottomOf="@+id/TapToEnable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toEndOf="@+id/TapToEnable"
        app:layout_constraintTop_toTopOf="@+id/TapToEnable"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/FeatTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ATM_Title"
        android:textColor="#F79489"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="300dp" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/TapToEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/Allfeat_Tap2Enable"
        android:textColor="#D8A7B1"
        app:layout_constraintStart_toStartOf="@+id/FeatTitle"
        app:layout_constraintTop_toBottomOf="@+id/FeatTitle" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="253dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TapToEnable"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/ARC_Volume"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/taptotestvolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/TapVolumeTest"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0%"
        android:textColor="#999999"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100%"
        android:textColor="#999999"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Switch
        android:id="@+id/overridednd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taptotestvolume"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/switchtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ping in Silent mode"
        android:textColor="#2F435A"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/managecustomText_string"
        app:layout_constraintEnd_toEndOf="@+id/overridednd"
        app:layout_constraintStart_toStartOf="@+id/overridednd"
        app:layout_constraintTop_toBottomOf="@+id/managecustomText" />

</androidx.constraintlayout.widget.ConstraintLayout>