<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBF2">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="495dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3B3B3B"
                android:padding="8dp"
                android:text="@string/Settings"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <Switch
                android:id="@+id/overridednd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/RingInDND"
                android:textColor="#525252"></Switch>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/RingInDND_desc"
                android:textColor="#808080"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="FAQ"
                android:textColor="#525252"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3B3B3B"
                android:padding="8dp"
                android:text="Troubleshoot"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/testCallLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Test CallLog"
                android:textColor="#525252"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />
            <TextView
                android:id="@+id/testNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Test Notification"
                android:textColor="#525252"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />
        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>